WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
149352
iOS WebKitTestRunner frequently crashes in WKContextGetIconDatabase
https://bugs.webkit.org/show_bug.cgi?id=149352
Summary
iOS WebKitTestRunner frequently crashes in WKContextGetIconDatabase
Alexey Proskuryakov
Reported
2015-09-18 13:06:02 PDT
Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.WebKit 0x000000010a5df46c WTF::RefPtr<WebKit::WebIconDatabase>::get() const + 12 (RefPtr.h:61) 1 com.apple.WebKit 0x000000010a5dac4c WebKit::WebProcessPool::iconDatabase() const + 28 (WebProcessPool.h:238) 2 com.apple.WebKit 0x000000010a71035d WKContextGetIconDatabase + 29 (WKContext.cpp:444) 3 org.webkit.WebKitTestRunnerApp11 0x0000000105f02ed9 WTR::TestController::~TestController() + 57 (TestController.cpp:145) 4 org.webkit.WebKitTestRunnerApp11 0x0000000105f03405 WTR::TestController::~TestController() + 21 (TestController.cpp:148) 5 org.webkit.WebKitTestRunnerApp11 0x0000000105ef57fb -[WebKitTestRunnerApp _runTestController] + 59 (mainIOS.mm:44)
Attachments
proposed fix
(1.43 KB, patch)
2015-09-18 13:09 PDT
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2015-09-18 13:09:09 PDT
Created
attachment 261514
[details]
proposed fix
WebKit Commit Bot
Comment 2
2015-09-18 13:57:47 PDT
Comment on
attachment 261514
[details]
proposed fix Clearing flags on attachment: 261514 Committed
r189981
: <
http://trac.webkit.org/changeset/189981
>
WebKit Commit Bot
Comment 3
2015-09-18 13:57:51 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug