iOS WebKitTestRunner frequently crashes in WKContextGetIconDatabase https://bugs.webkit.org/show_bug.cgi?id=149352

Reviewed by Simon Fraser.

* WebKitTestRunner/TestController.cpp: (WTR::TestController::~TestController):
m_context can be null. This may indicate a bug in webkitpy too, but
WebKitTestRunner should handle this situation nicely, there is nothing intrinsically
wrong with opening and immediately closing it.


Canonical link: https://commits.webkit.org/167425@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189981 268f45cc-cd09-0410-ab3c-d52691b4dbfc